# zora

./: .gitignore  Makefile  Makefile.in  README  colourramp.c  configure.ac  main.c  randr.c  randr.h
data/: com.vlastavesely.zora.gschema.xml  zora.desktop.in
indicator/: dock.c  dock.h  indicator.c  indicator.h  main.c  zora-application.c  zora-application.h  zora-control.c  zora-control.h  zora-dock.c  zora-dock.h  zora-indicator.c  zora-indicator.h  zora-main.c
zora/: colourramp.c  colourramp.h  randr.c  zora.1  zora.c
